--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,15 @@
-  name: Upload S3
-  uses: shallwefootball/upload-s3-action@v1.1.1
-  with:
-    # aws key id
-    aws_key_id: AKIATBCXQYSNIFM6UXYN
-    # aws secret access key
-    aws_secret_access_key: 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
-    # aws bucket name
-    aws_bucket: app1-2042
-    # directory to upload
-    source_dir: test
-    # destination directory for upload
-    destination_dir: # optional, default is /
+name: Upload to S3
+
+on: [pull_request]
+
+jobs:
+  upload:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ sAKIATBCXQYSNHBINY3BN  }}
+          aws_secret_access_key: ${{ 56yWFgJiGWbsosOUj5tznkNd2FzABo11ncv6uEn/}}
+          aws_bucket: ${{ app1-2042 }}
+          source_dir: 'test'
